pkgs/typed-racket-pkgs/typed-racket-test/tests/typed-racket/fail/pr14615.rkt
#lang typed/racket/base
(require racket/gui)
(define (f)
  (let ([fn (put-file)])
    (when fn
      (values fn))))
